--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -51,6 +51,7 @@ jobs:
         echo "Repo root directory: $GITHUB_WORKSPACE"
         echo "Current directory: $PWD"
         rm -rf ${{ github.workspace }}
+        mkdir ${{ github.workspace }}
     - name: Check Branch Input
       run: |
             if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
