--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -302,11 +302,29 @@ jobs:
     - name: Create build folder
       run: |
         mkdir -p build/test/unit_test/build
-    - name: Download output for MG12 from Job 1
-      uses: actions/download-artifact@v3
-      with:
-        name: firmware_mg12_gcc
-        path: ./build/test/unit_test/build
+    - name: Install jq (if needed)
+      run: |
+        sudo apt-get update
+        sudo apt-get install jq -y
+    - name: Download firmware artifact from GitHub
+      run: |
+          export PAT="${{ secrets.SILABS_THIEUVU_PAT}}  
+          export REPO_OWNER="SiliconLabs"
+          export REPO_NAME="IEC60730_Libs"
+          export RUN_ID="${{ github.run_id }}" 
+          export ARTIFACT_NAME="firmware_mg12_gcc"  
+          
+          ARTIFACT_URL=$(curl -s -H "Authorization: token $PAT" \
+            "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/actions/runs/$RUN_ID/artifacts" | \
+            jq -r ".artifacts[] | select(.name==\"$ARTIFACT_NAME\") | .archive_download_url")
+          if [ -z "$ARTIFACT_URL" ]; then
+            echo "Artifact not found for run ID $RUN_ID."
+            exit 1
+          fi
+          curl -L -o firmware_artifact.zip -H "Authorization: token $PAT" "$ARTIFACT_URL"
+          mv firmware_mg12_gcc.zip ./build/test/unit_test/build
+          unzip ./build/test/unit_test/build/firmware_mg12_gcc.zip -d ./build/test/unit_test/build
+          ls -R
     - name: Download output for MG24 from Job 1
       uses: actions/download-artifact@v3
       with:
