--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -308,7 +308,7 @@ jobs:
         #sudo apt-get install jq -y
     - name: Download firmware artifact from GitHub
       run: |
-          export PAT="${{ secrets.SILABS_THIEUVU_PAT}}  
+          export PAT="${{ secrets.SILABS_THIEUVU_PAT}}"  
           export REPO_OWNER="SiliconLabs"
           export REPO_NAME="IEC60730_Libs"
           export RUN_ID="${{ github.run_id }}" 
