--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -245,13 +245,13 @@ jobs:
       uses: actions/upload-artifact@v4.3.4
       with:
         name: firmware_mg12_gcc
-        path: ${{ github.workspace }}/build_MG12/test/integration_test/build/${{ env.BOARD_NAME_MG12 }}/
+        path: ${{ github.workspace }}/build_MG12/test/integration_test/build/
         retention-days: 90
     - name: Upload firmware MG24
       uses: actions/upload-artifact@v4.3.4
       with:
         name: firmware_mg24_gcc
-        path: ${{ github.workspace }}/build/test/integration_test/build/${{ env.BOARD_NAME_MG24 }}/
+        path: ${{ github.workspace }}/build/test/integration_test/build/
         retention-days: 90
   job2:
     name: Run unit test
@@ -301,7 +301,7 @@ jobs:
         ls -la
     - name: Create build folder
       run: |
-        mkdir -p build/test/unit_test/build
+        mkdir -p ${{ github.workspace }}/build/test/unit_test/build
     - name: Install jq (if needed)
       run: |
         jq -V
@@ -321,15 +321,42 @@ jobs:
             echo "Artifact not found for run ID $RUN_ID."
             exit 1
           fi
-          curl -L -o firmware_artifact.zip -H "Authorization: token $PAT" "$ARTIFACT_URL"
-          mv firmware_mg12_gcc.zip ./build/test/unit_test/build
-          unzip ./build/test/unit_test/build/firmware_mg12_gcc.zip -d ./build/test/unit_test/build
-          ls -R
+          curl -L -o firmware_mg12_gcc.zip -H "Authorization: token $PAT" "$ARTIFACT_URL"
+          if [ $? -eq 0 ] && [ -f "firmware_mg12_gcc.zip" ]; then
+            echo "Download successful"
+            mv firmware_mg12_gcc.zip ./build/test/unit_test/build
+            unzip ./build/test/unit_test/build/firmware_mg12_gcc.zip -d ./build/test/unit_test/build
+            ls -R
+          else
+            echo "Download failed"
+            exit 1
+          fi
+          
     - name: Download output for MG24 from Job 1
-      uses: actions/download-artifact@v3
-      with:
-        name: firmware_mg24_gcc
-        path: ./build/test/unit_test/build
+      run: |
+          export PAT="${{ secrets.SILABS_THIEUVU_PAT}}"  
+          export REPO_OWNER="SiliconLabs"
+          export REPO_NAME="IEC60730_Libs"
+          export RUN_ID="${{ github.run_id }}" 
+          export ARTIFACT_NAME="firmware_mg24_gcc"  
+          
+          ARTIFACT_URL=$(curl -s -H "Authorization: token $PAT" \
+            "https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/actions/runs/$RUN_ID/artifacts" | \
+            jq -r ".artifacts[] | select(.name==\"$ARTIFACT_NAME\") | .archive_download_url")
+          if [ -z "$ARTIFACT_URL" ]; then
+            echo "Artifact not found for run ID $RUN_ID."
+            exit 1
+          fi
+          curl -L -o firmware_mg24_gcc.zip -H "Authorization: token $PAT" "$ARTIFACT_URL"
+          if [ $? -eq 0 ] && [ -f "firmware_mg12_gcc.zip" ]; then
+            echo "Download successful"
+            mv firmware_mg24_gcc.zip ./build/test/unit_test/build
+            unzip ./build/test/unit_test/build/firmware_mg24_gcc.zip -d ./build/test/unit_test/build
+            ls -R
+          else
+            echo "Download failed"
+            exit 1
+          fi
     - name: Run test
       run: |
         export PATH=$PATH:~/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
