--- a/.github/workflows/02-Run_Unit_Test.yaml
+++ b/.github/workflows/02-Run_Unit_Test.yaml
@@ -212,8 +212,8 @@ jobs:
         cd build
         slc signature trust -extpath $SDK_PATH_BUILD/extension/IEC60730_Libs
         echo "Run Cmake"
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
-        make integration_test_info -j4
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
+        make unit_test_info -j4
         export HOST_IP=192.168.1.69
         cd ../test/
         ls -la
@@ -232,8 +232,8 @@ jobs:
         cd build
         slc signature trust -extpath $SDK_PATH_BUILD/extension/IEC60730_Libs
         echo "Run Cmake"
-        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
-        make integration_test_info -j4
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
+        make unit_test_info -j4
         cd ../test/
         ls -la
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG24 }}" ]; then
@@ -301,6 +301,7 @@ jobs:
         ls -la
     - name: Create build folder
       run: |
+        make prepare
         mkdir -p ${{ github.workspace }}/build/test/unit_test/build
     - name: Install jq (if needed)
       run: |
@@ -370,6 +371,8 @@ jobs:
         slc configuration -gcc=$TOOL_DIRS_RUN
         # make prepare
         echo "Run unit test for MG12"
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG12
+        make unit_test_info -j4
         cd build
         slc signature trust -extpath $SDK_PATH_RUN/extension/$REPO_NAME
         cd ../test
@@ -391,6 +394,8 @@ jobs:
         #echo 'bash execute_unit_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER "-DENABLE_CRC_USE_SW=ON  -DENABLE_CAL_CRC_32=ON"' > log/Test_integration_$BOARD_NAME_GCC_5.txt
 
         echo "Run unit test for MG24"
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_UNIT_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
+        make unit_test_info -j4
         ls -la
         cd ${{ github.workspace }}
         ls -la
